Fix Lookup dropdown alignment and styleguide configs

--- a/src/form/Lookup/index.scss
+++ b/src/form/Lookup/index.scss
@@ -5,7 +5,7 @@
     flex: 0 0 100%;
 
     .dropdown-menu {
-        margin-top: -1rem; // Force it right under the input
+        margin: 0;
 
         .lookup-result {
             display: block;
@@ -41,11 +41,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    margin-bottom: 1rem;
     padding: 0.375rem 0;
-
-    &-content {
-    }
 
     &-clear {
         background: none;
